fix image stretching

--- a/src/main.styl
+++ b/src/main.styl
@@ -2,6 +2,7 @@ body
     font-family 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif
 
 main
+    align-items center
     display flex
     flex-direction column
     height 100vh
